--- a/templates/game/game.html
+++ b/templates/game/game.html
@@ -6,6 +6,8 @@
 <title>Bithumb</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, viewport-fit=cover">
 
+	<script href = "{% static 'js/send_score.js' %}"></script>
+
 	<link rel="manifest" href="{% static 'game/appmanifest.json' %}">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<link rel="apple-touch-icon" sizes="128x128" href="{% static 'game/icons/icon-128.png' %}">
